# ifk-sverige

./: .eslintrc.cjs  .gitignore  .pre-commit-config.yaml  .prettierrc  README.md  index.html  package-lock.json  package.json  pyproject.toml  vite.config.ts
.github/workflows/: github-action-build.yaml  github-action-lint.yaml  github-action-site.yaml  github-action-tile.yaml  map-build.yaml  text-search-server-test-build.yaml  text-search-server.yaml
app/: globals.css
src/: App.css  App.module.css  App.tsx  Footer.tsx  Header.tsx  Menu.tsx  Store.tsx  Theme.tsx  colors.module.css  config.tsx  delaunay.tsx  main.tsx  vite-env.d.ts
src/components/ui/: dialog.tsx
src/data_layer/: smhi.py
src/geometry/: maptile_feature_filter.json
src/map/: app.jsx  config.tsx  index.html  layer_assembly.tsx  main.tsx  styles.css  types.tsx
src/map/components/: App.tsx  DataTileLayer.tsx  DelaunayLayer.tsx  Footer.tsx  Header.tsx  Store.tsx  Theme.tsx
src/map/layers/: datatile-layer.tsx  delaunay-layer.tsx
src/sverige_backend/: config.py  geometry.py
src/sweden_geometry/: config.py  geometry.py
src/sweden_map/: irradiance.py  load_data.py
src/text_search_server/: Dockerfile  search.py  trie.py
src/tiles/: communication.sh  construction.sh  ground.sh  text.sh
src/tiles/filters/: filter_building.json  filter_communication.json  filter_ground.json  filter_text.json
src/utils/: theme.tsx  utils.tsx
tests/: test_integration_search.py  test_integration_trie.py
